# utter

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  build.rs  release-please-config.json
.github/workflows/: ci.yml  prerelease-cleanup.yml  prerelease.yml  release-please.yml  release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALL.md  MACOS_PORT.md  TROUBLESHOOTING.md  UNINSTALL.md
docs/superpowers/plans/: 2026-04-21-macos-settings-ui.md
docs/superpowers/specs/: 2026-04-21-macos-prototype-design.md
examples/: utter-daemon.service  utter-watcher.service
packaging/: nfpm.yaml
packaging/scripts/: postinstall.sh  postremove.sh  preremove.sh
packaging/systemd/: utter-daemon.service  utter-watcher.service  ydotool-owner.conf
packaging/udev/: 90-utter.rules
scripts/: download-model.sh  install-release.sh  install.sh  make-bundle.sh  uninstall.sh
src/: config.rs  macos.rs  macos_onboarding.rs  macos_ui.rs  main.rs
