[package]
name = "utter"
version = "0.3.0"
edition = "2021"
description = "Local push-to-talk voice dictation for Linux, powered by NVIDIA Parakeet"
license = "MIT"
repository = "https://github.com/jguice/utter"

[dependencies]
transcribe-rs = { version = "0.3", features = ["onnx"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "signal", "io-util", "sync", "time", "fs"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
env_logger = "0.11"
log = "0.4"
nix = { version = "0.29", features = ["signal"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.13", features = ["tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
cpal = "0.15"
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.5"
block2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSPasteboard",
    "NSApplication",
    "NSRunningApplication",
    "NSResponder",
    "NSMenu",
    "NSMenuItem",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSButton",
    "NSControl",
    "NSView",
    "NSCell",
    "NSImage",
    "NSEvent",
    "NSGraphicsContext",
    "NSColor",
    "NSAppearance",
    "NSWindow",
    "NSText",
    "NSTextField",
    "NSStackView",
    "NSLayoutConstraint",
    "NSLayoutAnchor",
    "NSFont",
    "NSFontDescriptor",
    "NSLayoutGuide",
    "NSGraphics",
    "NSBox",
    "NSUserInterfaceLayout",
] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray", "NSThread", "NSTimer", "NSDate", "NSGeometry"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
strip = true
lto = "thin"
